extends Control


func _on_back_button_pressed() -> void:
	CanvasManager.play_current_menu()
	pass # Replace with function body.



func _on_volume_master_slider_value_changed(value: float) -> void:
	pass # Replace with function body.


func _on_volume_music_slider_value_changed(value: float) -> void:
	pass # Replace with function body.


func _on_volume_sfx_slider_value_changed(value: float) -> void:
	pass # Replace with function body.


func _on_v_sync_check_button_toggled(toggled_on: bool) -> void:
	pass # Replace with function body.
